--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.6.1"
+    "mongoose": "^5.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
