--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start":"SET NODE_ENV=production&&nodemon index.js"
-
+    "prod_start": "SET NODE_ENV=production&&nodemon index.js"
   },
   "keywords": [
     "social"
@@ -26,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
     "mongoose": "^5.6.1",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.3.0",
@@ -33,6 +33,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^1.4.3",
     "socket.io": "^2.2.0"
   }
 }
