--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
+    "del": "^5.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify-es": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
     "mongoose": "^5.6.1",
@@ -35,5 +41,8 @@
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^1.4.3",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
